--- a/css/jquery-smartvimeoembed.css
+++ b/css/jquery-smartvimeoembed.css
@@ -1,15 +1,14 @@
 .vimeo-wrapper {
 	display: inline-block;
 	position: relative;
+	cursor: pointer;
 }
 
 .vimeo-wrapper.play-icon:before {
 	position: absolute;
-	top: calc(50% - 34px);
-	left: calc(50% - 63px);
 	content: '';
 	display: block;
-	width: 126px;
-	height: 68px;
-	background: url(/img/icon-play.png) no-repeat;
+	width: 100%;
+	height: 100%;
+	background: url(/img/icon-play.png) no-repeat center center;
 }
